# wgpu-testing

./: Cargo.toml
run-wasm/: Cargo.toml
src/: color.rs  dimensions.rs  image_writer.rs  lib.rs  main.rs
src/gpu/: basic_compute.rs  basic_compute.wgsl  copy_val.rs  draw_uv.rs  draw_uv.wgsl  gpu.rs  mod.rs
src/structs/: color.rs  mod.rs
src/utils/: mod.rs  write_image.rs
wgpu-lib/: Cargo.toml
wgpu-lib/src/: lib.rs
wgpu-lib/src/examples/: basic_compute.rs  copy_val.rs  draw_uv.rs  draw_uv.wgsl  mod.rs
wgpu-lib/src/gpu/: basic_compute.rs  draw_uv.rs  gpu.rs
wgpu-lib/src/ray_tracing/: mod.rs  ray_trace.rs  ray_trace.wgsl
wgpu-lib/src/ray_tracing/structs/: camera.rs  mod.rs  sphere.rs  vec3.rs
wgpu-lib/src/structs/: color.rs
wgpu-lib/src/utils/: mod.rs  test_uv.rs
wgpu-local/: Cargo.toml
wgpu-local/src/: main.rs
wgpu-wasm/: Cargo.toml
wgpu-wasm/src/gpu/: basic_compute.wgsl  copy_val.rs
wgpu-web/: Cargo.toml
wgpu-web/src/: lib.rs  main.rs
