[package]
name = "wgpu-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
bytemuck = {version = "1.9.1", features = ["derive"]}

[dev-dependencies]
pollster = "0.2"